# BiRAGAS-Unified-Application

./: .gitignore  BiRAGAS_Unified_App.html  README.md  __init__.py  integration_bridge.py  render.yaml  requirements.txt  server.py  start.py
agentic_ai_wf/: .gitignore  broadcast_api.py  crispr_screening_extraction.py  crispr_targeted_extraction.py  global_config.py  main.py  orchestrator_agent.py  pyproject.toml  run_autonomous_agent.py  run_orchestrator_agent.py  workflow_context.py
agentic_ai_wf/aws_claude/: api_key_test.py
agentic_ai_wf/causality_pipeline_agent/: main.py
agentic_ai_wf/clinical_report/: clinical_report_generator.py  combined_stats.py  config.py  disease_context_cache.py  disease_focused_validation.py  disease_severity.py  drugs_discovery_pathways.py  enhanced_pathway_validator.py  fc_bins_dist.py  group_summary_generator.py  key_molecular_signatures.py  llm_client.py  pathway_custom_signatures.py  pathway_gene_mapper.py  pathways_processing.py  pathways_summary.py  patient_info.py  risk_factors.py  signatures_grouper.py  target_disease_drugs.py  text_generation.py  utils.py  validation_integration.py  validation_layer.py
agentic_ai_wf/cohort_retrieval_agent/: __init__.py  cohortagent.py  modulecalling.py
agentic_ai_wf/crispr_pipeline_agent/: main.py  screening_main.py  targeted_main.py
agentic_ai_wf/custom_agents/: data_retrieval_agent.py  drug_prioritizer_agent.py  guardrail.py  planner_agent.py
agentic_ai_wf/data/: test.py
agentic_ai_wf/deg_pipeline_agent/: README.md  __init__.py  agent.py  config.py  exceptions.py
(+775 files in other folders)
