[project]
name = "agentic-ai-abs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioftp>=0.25.2",
    "bio>=1.8.0",
    "geoparse>=2.0.4",
    "openai>=1.90.0",
    "openai-agents>=0.0.19",
    "openai-agents-mcp>=0.0.8",
    "pydeseq2>=0.5.1",
    "rich>=13.7.0,<14.0.0",
    "xmltodict>=0.14.2",
    "bs4>=0.0.2",
    "networkx>=3.5",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "selenium-stealth>=1.0.6",
    "aiohttp>=3.11.18",
    "biopython>=1.85",
    "google-genai>=1.13.0",
    "matplotlib>=3.10.1",
    "mygene>=3.2.2",
    "openpyxl>=3.1.5",
    "sacremoses>=0.1.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "pydantic",
    "httpx",
    "tqdm",
    "PyPDF2",
    "tiktoken",
    "jsons",
    "bs4"
]